[metadata]
name = pytest_blender
version = 3.0.7
description = Blender Pytest plugin.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mondeja/pytest-blender
author = Álvaro Mondéjar Rubio
author_email = mondejar1994@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Framework :: Pytest
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Documentation = https://github.com/mondeja/pytest-blender#documentation
    GitHub Project = https://github.com/mondeja/pytest-blender
    Issue Tracker = https://github.com/mondeja/pytest-blender/issues
    Changelog = https://github.com/mondeja/pytest-blender/releases

[options]
packages = pytest_blender
python_requires = >=3.7
install_requires =
    pytest

[options.entry_points]
console_scripts =
    pytest-blender = pytest_blender.__main__:main
pytest11 =
    pytest-blender = pytest_blender.plugin

[options.extras_require]
dev =
    pytest-cov
test =
    pytest-cov

[tool:pytest]
addopts = -svv -p no:pytest-blender -p pytester

[flake8]
max-line-length = 88
extend-ignore =
    E203,
    W503,
    E731
per-file-ignores =
    tests/conftest.py: E402

[isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 88
use_parentheses = True
combine_as_imports = True
include_trailing_comma = True
known_tests = tests
sections = STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
